fix z-index and modal windows

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -95,7 +95,8 @@ body {
 
 .navbar-default {
   color: white;
-  background-color: transparent; }
+  background-color: transparent;
+  z-index: 9; }
 
 @media only screen and (min-width: 1024px) {
   .navbar-collapse {
@@ -404,7 +405,6 @@ body {
 #about-1, #about-2, #about-3, #about-4, #about-5, #about-6 {
   background-attachment: fixed;
   position: relative;
-  z-index: -9;
   padding: 0px; }
   @media only screen and (min-width: 1024px) {
     #about-1, #about-2, #about-3, #about-4, #about-5, #about-6 {
@@ -524,7 +524,7 @@ body {
   top: 5%; }
   @media only screen and (min-width: 1024px) {
     .sq-text {
-      padding: 30px; } }
+      padding: 20px; } }
   @media only screen and (min-width: 979px) and (max-width: 1024px) {
     .sq-text {
       padding: 5px 15px; } }
@@ -855,7 +855,7 @@ body {
   text-align: left; }
 
 #about-5 {
-  margin-top: 70%; }
+  margin-top: 77%; }
   @media only screen and (max-width: 767px) {
     #about-5 {
       margin-top: 5%; } }
@@ -1181,3 +1181,96 @@ body {
 
 .list-know li:hover, .list-know li:focus {
   color: #BEBEBE; }
+
+.sldr {
+  margin-top: -32%;
+  /* border: 5px solid red; */ }
+  @media only screen and (max-width: 480px) {
+    .sldr {
+      margin-top: 0px; } }
+
+.mydots {
+  background-color: #FFFFFF;
+  color: #000000;
+  font-style: normal;
+  font-weight: bolder;
+  font-size: 29px;
+  font-variant: small-caps;
+  text-transform: none;
+  padding: 10px; }
+  @media only screen and (max-width: 480px) {
+    .mydots {
+      font-size: 14px;
+      padding: 4px; } }
+
+.mydots {
+  position: relative;
+  background: transparent;
+  border: 4px solid grey; }
+
+.mydots:after, .mydots:before {
+  top: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none; }
+
+.mydots:after {
+  border-color: transparent;
+  border-top-color: 8b8b8b;
+  border-width: 20px;
+  margin-left: -20px; }
+
+.mydots:before {
+  border-color: transparent;
+  border-top-color: #8b8b8b;
+  border-width: 26px;
+  margin-left: -26px; }
+
+.slick-dots {
+  display: flex;
+  justify-content: space-between;
+  bottom: 390px;
+  margin-top: 50px; }
+  @media only screen and (max-width: 480px) {
+    .slick-dots {
+      bottom: 530px; } }
+
+.team {
+  margin-left: 150px;
+  margin-right: 150px; }
+  @media only screen and (max-width: 480px) {
+    .team {
+      margin-left: 10px;
+      margin-right: 10px; } }
+
+.text-style-1rst-banner {
+  font-family: "OpenSans-Regular", sans-serif;
+  color: #191d72;
+  line-height: 2;
+  font-size: 14px;
+  margin: 0px 0px 0px 0px; }
+  @media only screen and (max-width: 480px) {
+    .text-style-1rst-banner {
+      font-size: 10px; } }
+
+.text-style-1rst-banner-if_you {
+  margin-top: -5px; }
+
+.text-style-1rst-banner-ab {
+  font-size: 15px; }
+
+#s1rst-banner-last {
+  display: none; }
+
+.slick-active .mydots {
+  border: 4px solid #ffeb3b; }
+
+.slick-active .mydots:after {
+  border-top-color: #ffeb3b; }
+
+.slick-active .mydots:before {
+  border-top-color: #ffeb3b; }
